--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -34,6 +34,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  http: ^1.6.0
+  google_fonts: 
+  flutter_riverpod:
+  youtube_player_flutter: ^9.1.3
+
 
 dev_dependencies:
   flutter_test:
