--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: 
   flutter_riverpod:
   youtube_player_flutter: ^9.1.3
+  flutter_markdown: ^0.7.7+1
 
 
 dev_dependencies:
