--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   flutter_riverpod:
   youtube_player_flutter: ^9.1.3
   flutter_markdown: ^0.7.7+1
+  fluttertoast: ^9.0.0
+  shared_preferences: ^2.5.4
+  lottie: ^3.3.2
 
 
 dev_dependencies:
@@ -64,8 +67,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/animation/Cute bear dancing.json
+    - assets/images/cognitube.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
