--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   fluttertoast: ^9.0.0
   shared_preferences: ^2.5.4
   lottie: ^3.3.2
-
+  flutter_launcher_icons: ^0.14.4
 
 dev_dependencies:
   flutter_test:
@@ -57,6 +57,12 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/cognitube.png"
+  # Optional: For iOS, remove transparency if needed
+  remove_alpha_ios: true
 
 # The following section is specific to Flutter packages.
 flutter:
@@ -70,6 +76,7 @@ flutter:
   assets:
     - assets/animation/Cute bear dancing.json
     - assets/images/cognitube.png
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
